# n2v

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE_SNNV_INTEGRATION.md  MANIFEST.in  README.md  TESTING.md  __init__.py  config.py  install.sh  install_tool.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_instance.sh  snnv_integration_log.md
.github/workflows/: docs.yml  tests.yml
benchmarks/: README.md  benchmark_time.py  config.py  run_benchmarks.py
benchmarks/results/: baseline.json  latest.json
benchmarks/vit_vnncomp2023/: README.md  STATUS.md  VIT_CROWN_LPFREE.md  _probe_symbolic.py  bab_vit.py  make_vnnlib.py  measure.py  model.py  reach.py  results_concretize.txt  results_symbolic_eps0p3.csv  results_vnncomp_fulleps.csv  results_vnncomp_fulleps.txt  run_benchmark.py  run_vit_crown.py  vit_crown.py
docs/: conf.py  development_status.md  differentiable_solver.md  index.rst  lp_solver_enum_design.md  lp_solvers.md  probabilistic_verification.md  theoretical_foundations.md
docs/api/: config.rst  index.rst  layer-ops.rst  neural-network.rst  probabilistic.rst  sets.rst  utils.rst
docs/examples/: acasxu.rst  basic-verification.rst  index.rst  mnist-tutorial.rst  probabilistic-verification.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
docs/plans/: 2026-03-23-repo-cleanup-design.md  2026-03-23-repo-cleanup.md
docs/theory/: branch-and-bound.md  index.rst  probabilistic-verification.md  sound-vit-reach.md  theoretical-foundations.md
docs/user-guide/: configuration.rst  falsification.rst  index.rst  onnx-support.rst  set-representations.rst  spiking-neural-networks.md  verification-methods.rst
examples/: README.md  simple_verification.py
examples/ACASXu/: README.md  run_benchmark.sh  run_instance.py  verify_acasxu.py
examples/AcasXu/: README.md  run.sh  test_verify_acasxu.py  verify_acasxu.py  verify_acasxu_star.py
examples/CompareMATLAB/: README.md  compare_results.py  test_sample.mat  train_and_export_onnx.py  verify_fc_approx.m  verify_fc_approx.py  verify_fc_exact.m  verify_fc_exact.py
examples/CompareNNV/: README.md  config.py
examples/CompareReachability/: compare_reachability.py
examples/FairN2V/: README.md  adult_verify.py  plot_results.py  run_fairn2v.py
examples/FlowConformal/: CSV_SCHEMAS.md  README.md  exp_coverage_validation.py  networks.py  plot_coverage_validation.py
examples/MNIST/: 01_train_fc_mnist.ipynb  02_verify_fc_mnist.ipynb  03_train_cnn_mnist.ipynb  04_verify_cnn_mnist.ipynb  README.md
examples/Octatope/: README.md  compare_mnist.py  compare_small.py  compare_tiny.py  profile_octatope.py  quick_diagnostic.py  test_octatope_reach.py
examples/ProbVer/: README.md  showcase_blackbox.py  showcase_scalability.py  showcase_speed.py
examples/SNN/: train_snn.py  verify_snn.py
examples/Tutorial/: README.md  train_cnn.py  train_fc.py  verify_cnn.py  verify_fc.py
examples/VNN-COMP/: README.md  benchmark_configs.py  prepare_instance.py  run_benchmark.sh  run_instance.py  smoke_test.sh  smoke_test_results.csv
examples/perf/: pt2_gpu_lp_benchmark.py  pt2_gpu_lp_regime_sweep.py
examples/vnncomp/: prepare_instance.py  run_instance.py
external_snnv/: snn_comparison.py  snn_comparison_reference.md
models/: mnist_snn.pt
n2v/: __init__.py  config.py
n2v/nn/: __init__.py  _tracer.py  bab.py  crown_reach.py  neural_network.py  reach.py  spiking_neural_network.py  vit_crown.py
n2v/probabilistic/: __init__.py  conformal.py  verify.py
n2v/profiling/: __init__.py  profiler.py
n2v/refine/: __init__.py  bab.py  input_split.py  input_split_gpu.py  operations.py  (+5 more)
nn/: __init__.py  neural_network.py  reach.py
sets/: __init__.py  box.py  halfspace.py  hexatope.py  image_star.py  image_zono.py  octatope.py  star.py  zono.py
tests/: README.md  README_differentiable_solver.md  __init__.py  conftest.py  test_contains_v3.py  test_dispatcher.py  test_hexatope_anchor.py  test_image_sets.py  test_integration.py  test_intro_examples.py  test_layer_ops.py  test_load_vnnlib.py  test_multirow_constraints.py  test_octatope_soundness.py  test_sets.py  test_verify_specification.py
utils/: __init__.py  load_vnnlib.py  lpsolver.py  model_loader.py  verify_specification.py
(+616 files in other folders)
