[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n2v"
version = "0.1.0"
description = "Neural network verification using set-based reachability analysis and probabilistic verification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "VeriVITAL Team", email = "samuel.sasaki@vanderbilt.edu"}
]
keywords = ["neural networks", "verification", "reachability", "formal methods", "pytorch"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "cvxpy>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "onnxscript>=0.1.0",
]
highs = [
    "highspy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/sammsaski/n2v"

[tool.setuptools.packages.find]
where = ["."]
include = ["n2v*"]
